# online_learning_platform

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
amount/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
amount/migrations/: 0001_initial.py  0002_amount_user.py
amount/templates/amount/: success.html
config/: settings.py  urls.py
course/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  views.py
course/migrations/: 0001_initial.py  0002_course_owner_course_price.py
fixture/: school.json
lesson/: models.py  paginators.py  serializers.py  tests.py  urls.py  validators.py  views.py
lesson/migrations/: 0001_initial.py  0002_lesson_owner.py
subscription/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
subscription/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py
